plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.21'
    id 'org.jetbrains.changelog' version '0.4.0'
}

group 'org.sanchouss.idea.plugins.instantpatch'
version '0.0.7-SNAPSHOT'

repositories {
    mavenCentral()
    jcenter()
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}


buildSearchableOptions {
    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED'
}

runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}

dependencies {
    compile('org.slf4j:slf4j-api:1.7.21')
    compile('com.jcraft:jsch:0.1.54')
    compile('javax.xml.bind:jaxb-api:2.3.0')
    implementation('com.intellij:openapi:6.0.5')

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2020.1.2'
}
patchPluginXml {
    changeNotes """
      - Fixing plugin verification results; move to gradle plugin"""
}